--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
     <!--Navigation-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid justify-content-space-between">
-              <div class="row">
-                <a class="navbar-brand" href="#"><i class="icon1 fa-solid fa-cubes"></i> Boardwalk Games</a>
+    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+            <div class="container-fluid">
+              
+                <a class="navbar-brand" href="#"><img src="assets/images/logo-sm-white.png" alt="Main Icon" class="icon1"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-              </div>  
+              
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
+                <div class="navbar-nav ms-auto">
                   <a class="nav-link active" aria-current="page" href="#">Home</a><hr>
                   <a class="nav-link" href="#Services">Services</a><hr>
                   <a class="nav-link" href="#Events">Events</a><hr>
@@ -56,19 +56,19 @@
         <section class="container">
             <h1 class="text-center display-4">Services</h1>
             <div class="row m-4"  id="Services">
-              <div class="col-sm-12 col-md-6 col-lg-3 border border-secondary">
+              <div class="col-sm-12 col-lg-6 col-xl-3 border border-secondary">
                 <h3>Play in our cafe</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit saepe repudiandae quaerat quibusdam quae animi, excepturi distinctio! Laudantium ipsum voluptatem accusantium, repellat magni quis quos.</p>
               </div>
-              <div class="col-sm-12 col-md-6 col-lg-3 border border-secondary">
+              <div class="col-sm-12 col-md-6 col-xl-3 border border-secondary">
                 <h3>Game Library</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit saepe repudiandae quaerat quibusdam quae animi, excepturi distinctio! Laudantium ipsum voluptatem accusantium, repellat magni quis quos.</p>
               </div>
-              <div class="col-sm-12 col-md-6 col-lg-3 border border-secondary">
+              <div class="col-sm-12 col-md-6 col-xl-3 border border-secondary">
                 <h3>Events</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit saepe repudiandae quaerat quibusdam quae animi, excepturi distinctio! Laudantium ipsum voluptatem accusantium, repellat magni quis quos.</p>
               </div>
-              <div class="col-sm-12 col-md-6 col-lg-3 border border-secondary">
+              <div class="col-sm-12 col-md-6 col-xl-3 border border-secondary">
                 <h3>Play in our cafe</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit saepe repudiandae quaerat quibusdam quae animi, excepturi distinctio! Laudantium ipsum voluptatem accusantium, repellat magni quis quos.</p>
               </div>
