--- a/index.html
+++ b/index.html
@@ -37,18 +37,47 @@
             </div>
     </nav>
     <!-- Header-->
-    <header class="container">
-        <section id="about" class="container-fluid">
-          <div class="row">  
-            <div class="col-sm-12 col-lg-5 p-4 m-4">
-                <h1 class="display-4">Boardwalk Games</h1>     
-                <p class="sub-heading-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quas nemo tenetur? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum culpa tempore vero, laboriosam saepe libero magnam suscipit, eaque tenetur illo accusantium cumque, in corporis.</p>
+    <header id="header" class="container">
+        <section id="about" class="container section">
+          <div class="row">
+            <div class="col-12 col-xl-6 text-center text-xl-start">
+                <h1 class="display-3">Boardwalk Games</h1>
+                <p class="lead display-6">Your next adventure is waiting!</p>     
+                <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape into the world of board games and café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got you covered.</p>
                 <button id="book-now" class="btn" type="submit">Book Now</button>
             </div>
-            <div class="col-sm-12 col-lg-5 p-4 m-4">
-                <img src="assets/images/boardwalk-games-carousel-image-1.webp" alt="game carousel" width="100%" height="100%">
+            <div id="carouselExample" class="carousel slide col-12 col-xl-6">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="assets/images/boardwalk-games-carousel-image-1.webp" class="d-block w-100" alt=" The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/boardwalk-games-carousel-image-2.webp" class="d-block w-100" alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/boardwalk-games-carousel-image-3.webp" class="d-block w-100" alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/boardwalk-games-carousel-image-4.webp" class="d-block w-100" alt="The back-room at Boardwalk Games set up for a Dungeons and Dragons evening">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/boardwalk-games-carousel-image-5.webp" class="d-block w-100" alt="A cup of steaming coffee on a wooden table, some playing cards, and a notebook.">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/boardwalk-games-carousel-image-6.webp" class="d-block w-100" alt="Students playing a card game at Boardwalk Games">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
-            <hr>
+            <hr class="my-4">
+          </div>  
         </section> 
     </header>
     <main>     
@@ -109,7 +138,7 @@
         </section>
     </main>
     <!--Footer Contact Section-->
-    <footer id="Contact" class="container-fluid mt-auto">
+    <footer id="Contact" class="container-fluid mt-auto" data-bs-theme="dark">
       <h1 class="text-center">Contact Us</h1>
         <div class="row m-4 justify-content-center">
             <!--Contact Info-->
