--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
           <div class="row">
             <div class="col-12 col-xl-6 text-center text-xl-start">
                 <h1 class="display-3">Boardwalk Games</h1>
-                <p class="lead display-6">Your next adventure is waiting!</p>     
+                <p class="lead display-6 ">Your next adventure is waiting!</p>     
                 <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape into the world of board games and café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got you covered.</p>
                 <button id="book-now" class="btn" type="submit">Book Now</button>
             </div>
-            <div id="carouselExample" class="carousel slide col-12 col-xl-6">
+            <div id="carouselExampleAutoplaying" class="carousel slide col-12 col-xl-6" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="assets/images/boardwalk-games-carousel-image-1.webp" class="d-block w-100" alt=" The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
