completed services section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="row">
             <div class="col-12 col-xl-6 text-center text-xl-start">
                 <h1 class="display-3">Boardwalk Games</h1>
-                <p class="lead display-6 ">Your next adventure is waiting!</p>     
+                <p class="lead display-6 sub-heading-color">Your next adventure is waiting!</p>     
                 <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape into the world of board games and café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got you covered.</p>
                 <button id="book-now" class="btn" type="submit">Book Now</button>
             </div>
@@ -82,27 +82,65 @@
     </header>
     <main>     
         
-        <section class="container">
-            <h1 class="text-center display-4">Services</h1>
-            <div class="row m-4"  id="Services">
-              <div class="col-sm-12 col-lg-6 col-xl-3 border border-secondary">
-                <h3>Play in our cafe</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit saepe repudiandae quaerat quibusdam quae animi, excepturi distinctio! Laudantium ipsum voluptatem accusantium, repellat magni quis quos.</p>
+        <section class="container section" id="Services">
+          <div class="row m-4">
+              <div class="col-12 text-center">
+                <h2 class="display-4">Services</h2>
               </div>
-              <div class="col-sm-12 col-md-6 col-xl-3 border border-secondary">
-                <h3>Game Library</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit saepe repudiandae quaerat quibusdam quae animi, excepturi distinctio! Laudantium ipsum voluptatem accusantium, repellat magni quis quos.</p>
+              <div class="col-12 col-md-6 col-xl-3">
+                <div class="card">
+                  <img src="assets/images/services-1.webp" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h3 class="card-title sub-heading-color">Play in our cafe</h3>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                  <div class="card-footer">
+                    <p class="mb-0">$7 per person</p>
+                  </div>
+                </div>
               </div>
-              <div class="col-sm-12 col-md-6 col-xl-3 border border-secondary">
-                <h3>Events</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit saepe repudiandae quaerat quibusdam quae animi, excepturi distinctio! Laudantium ipsum voluptatem accusantium, repellat magni quis quos.</p>
+              <div class="col-12 col-md-6 col-xl-3">
+                <div class="card">
+                  <img src="assets/images/services-2.webp" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h3 class="card-title sub-heading-color">Game Library</h3>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                  <div class="card-footer">
+                    <p class="mb-0">See Prices In Store</p>
+                  </div>
+                </div>
               </div>
-              <div class="col-sm-12 col-md-6 col-xl-3 border border-secondary">
-                <h3>Play in our cafe</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit saepe repudiandae quaerat quibusdam quae animi, excepturi distinctio! Laudantium ipsum voluptatem accusantium, repellat magni quis quos.</p>
+              <div class="col-12 col-md-6 col-xl-3">
+                <div class="card">
+                  <img src="assets/images/services-3.webp" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h3 class="card-title sub-heading-color">Events</h3>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                  <div class="card-footer">
+                    <p class="mb-0">$7 per person</p>
+                  </div>
+                </div>
               </div>
-            </div>
-        <hr>    
+              <div class="col-12 col-md-6 col-xl-3">
+                <div class="card">
+                  <img src="assets/images/services-4.webp" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h3 class="card-title sub-heading-color">Card title</h3>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                  <div class="card-footer">
+                    <p class="mb-0">$7 per person</p>
+                  </div>
+                </div>
+              </div>
+          </div>
+            <hr>    
         </section>  
         <section class="section3 container-fluid">
             <h1 class="text-center">Join Our Events</h1>
