--- a/game-library.html
+++ b/game-library.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="#Events">Events</a><hr>
                     <a class="nav-link active" aria-current="page" href="game-library.html">Games</a><hr>
                     <a class="nav-link" href="#Contact">Contact</a>
-                    <a class="btn btn-primary" href="book-now.html" role="button">Book Now</a>
+                    <a class="btn btn-primary ms-lg-3" href="booking.html" role="button">Book Now</a>
                 </div>
             </div>
           </div>
@@ -49,7 +49,7 @@
                 <h1 class="display-3">Game Library</h1>
                 <p class="lead display-6 sub-heading-color">Discover new games to rent or buy</p>     
                 <p class="my-4">Dive into a world of adventure, strategy, and fun with our carefully curated collection of board games to rent or buy. From timeless classics to the latest sensations, our shelves are packed with games waiting to be discovered.</p>
-                <button id="book-now" class="btn" type="submit">Book Now</button>
+                <a class="btn btn-primary mb-4" href="booking.html" role="button">Book Now</a>
             </div>
             <div id="carouselExampleAutoplaying" class="carousel slide col-12 col-xl-6" data-bs-ride="carousel">
               <div class="carousel-inner">
