--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <a class="nav-link" href="#Events">Events</a><hr>
                   <a class="nav-link" href="game-library.html">Games</a><hr>
                   <a class="nav-link" href="#Contact">Contact</a>
-                  <a class="btn btn-primary" href="book-now.html" role="button">Book Now</a>
+                  <a class="btn btn-primary" href="booking.html" role="button">Book Now</a>
            
                 </div>
               </div>
@@ -44,7 +44,7 @@
                 <h1 class="display-3">Boardwalk Games</h1>
                 <p class="lead display-6 sub-heading-color">Your next adventure is waiting!</p>     
                 <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape into the world of board games and café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got you covered.</p>
-                <button id="book-now" class="btn" type="submit">Book Now</button>
+                <a class="btn btn-primary mb-4" href="booking.html" role="button">Book Now</a>
             </div>
             <div id="carouselExampleAutoplaying" class="carousel slide col-12 col-xl-6" data-bs-ride="carousel">
               <div class="carousel-inner">
