added reserve section

--- a/booking.html
+++ b/booking.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="#Events">Events</a><hr>
                     <a class="nav-link" href="game-library.html">Games</a><hr>
                     <a class="nav-link" href="#Contact">Contact</a>
-                    <a class="btn btn-primary ms-lg-3" href="book-now.html" role="button" aria-current="page">Book Now</a>
+                    <a class="btn custom-button-filled ms-lg-3" href="book-now.html" role="button" aria-current="page">Book Now</a>
                 </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
                                 </div>
                             </div>
 
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn custom-button-empty">Submit</button>
                         </form>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                 </table>
               </div>
               <div id="row justify-content-center">
-                <p>Sign Up for Out Newsletter</p>
+                <p>Sign Up for Our Newsletter</p>
                 <label for="name">Name</label>
                 <input type="text" id="name">
                 <label for="email">Email</label>
