given fixed navbar and adjusted section padding

--- a/booking.html
+++ b/booking.html
@@ -20,7 +20,7 @@
 
 <body class="d-flex flex-column min-vh-100">
     <!--Navigation-->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container-fluid ps-4">
           
             <a class="navbar-brand" href="#"><img src="assets/images/logo-sm-white.png" alt="Main Icon" class="icon1"></a>
@@ -31,8 +31,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" href="index.html">Home</a><hr>
-                    <a class="nav-link" href="#Services">Services</a><hr>
-                    <a class="nav-link" href="#Events">Events</a><hr>
+                    <a class="nav-link" href="/index.html#Services">Services</a><hr>
+                    <a class="nav-link" href="/index.html#events-list">Events</a><hr>
                     <a class="nav-link" href="game-library.html">Games</a><hr>
                     <a class="nav-link" href="#Contact">Contact</a>
                     <a class="btn custom-button-filled ms-lg-3" href="book-now.html" role="button" aria-current="page">Book Now</a>
@@ -43,7 +43,7 @@
     </nav>
     
     <!-- header section -->
-    <header id="header" class="container section">
+    <header id="header" class="container pt-5">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8 text-center text-xl-start">
                 <h1 class="display-3">Boardwalk Games</h1>
