--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
     <!--Navigation-->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
             <div class="container-fluid">
               
                 <a class="navbar-brand" href="#"><img src="assets/images/logo-sm-white.png" alt="Main Icon" class="icon1"></a>
@@ -37,7 +37,7 @@
             </div>
     </nav>
     <!-- Header-->
-    <header id="header" class="container">
+    <header id="header" class="container pt-5">
         <section id="about" class="container section">
           <div class="row">
             <div class="col-12 col-xl-6 text-center text-xl-start">
