--- a/success.html
+++ b/success.html
@@ -26,7 +26,7 @@
 
 <body class="d-flex flex-column min-vh-100">
     <!-- Navigation -->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img class="logo" src="assets/images/logo-sm-white.png" alt="Boardwalk Games Logo">
@@ -41,10 +41,10 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#services">Services</a>
+                        <a class="nav-link" href="index.html#Services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="index.html#events" class="nav-link">Events</a>
+                        <a href="index.html#events-list" class="nav-link">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="game-library.html">Games</a>
@@ -61,7 +61,7 @@
     </nav>
 
     <!-- success message for users who successfully submit a form -->
-    <main id="success" class="container section text-center">
+    <main id="success" class="container section text-center pt-5">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
                 <h1 class="display-3">Thank you!</h1>
