--- a/index.html
+++ b/index.html
@@ -277,11 +277,13 @@
             </div>
             <div id="row justify-content-center">
               <p>Sign Up for Our Newsletter</p>
-              <label for="name">Name</label>
-              <input type="text" id="name">
-              <label for="email">Email</label>
-              <input type="email" id="email">
-              <button type="submit"></button>
+              <form action="success.html">
+                <label for="name">Name</label>
+                <input type="text" id="name" class="form-control" required>
+                <label for="email">Email</label>
+                <input type="email" id="email" class="form-control" required>
+                <button type="submit">Sign Up</button>
+            </form>
             </div>
         </div>
       </div>  
