--- a/success.html
+++ b/success.html
@@ -138,7 +138,16 @@
                     </table>
                 </div>
             </div>
-
+            <div id="row justify-content-center">
+                <p>Sign Up for Our Newsletter</p>
+                <form action="success.html">
+                  <label for="name">Name</label>
+                  <input type="text" id="name" class="form-control" required>
+                  <label for="email">Email</label>
+                  <input type="email" id="email" class="form-control" required>
+                  <button type="submit">Sign Up</button>
+              </form>
+            </div>
     </footer>
 
     <!-- font awesome 6 -->
