validated html and css files

--- a/booking.html
+++ b/booking.html
@@ -38,7 +38,7 @@
                     <a class="btn custom-button-filled ms-lg-3" href="book-now.html" role="button" aria-current="page">Book Now</a>
                 </div>
             </div>
-          </div>
+          
         </div>
     </nav>
     
@@ -160,7 +160,7 @@
                       <td>11am</td>
                       <td>12am</td>
                     </tr>
-                    <tr></tr>
+                    <tr>
                       <th scope="row">Sun</th>
                       <td>12pm</td>
                       <td>7pm</td>
@@ -168,14 +168,14 @@
                   </tbody>
                 </table>
               </div>
-              <div id="row justify-content-center">
-                <p>Sign Up for Our Newsletter</p>
+              <div class="row justify-content-center">
+                <h3 class="sub-heading-color">Sign Up for Our Newsletter</h3>
                 <form action="success.html">
-                  <label for="name">Name</label>
-                  <input type="text" id="name" class="form-control" required>
-                  <label for="email">Email</label>
-                  <input type="email" id="email" class="form-control" required>
-                  <button type="submit">Sign Up</button>
+                  <label for="name1">Name</label>
+                  <input type="text" id="name1" class="form-control" required>
+                  <label for="email2">Email</label>
+                  <input type="email" id="email2" class="form-control" required>
+                  <button type="submit" class="mt-2 custom-button-filled">Sign Up</button>
               </form>
               </div>
           </div>
