--- a/success.html
+++ b/success.html
@@ -18,7 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- custom css -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <!-- classes on body set to work with mt-auto on footer to 
@@ -66,13 +66,13 @@
             <div class="col-12 col-md-8">
                 <h1 class="display-3">Thank you!</h1>
                 <p class="lead">Your form has been submitted successfully!</p>
-                <a href="index.html" class="btn custom-button-outline mb-5">Return to the home page</a>
+                <a href="index.html" class="btn custom-button-empty mb-5">Return to the home page</a>
             </div>
         </div>
     </main>
 
     <!-- contact section -->
-    <footer id="contact" class="mt-auto">
+    <footer id="Contact" class="mt-auto">
         <div class="container section">
             <div class="row justify-content-center">
                 <div class="col-12 text-center">
@@ -138,16 +138,17 @@
                     </table>
                 </div>
             </div>
-            <div id="row justify-content-center">
-                <p>Sign Up for Our Newsletter</p>
+            <div class="row justify-content-center">
+                <h3 class="sub-heading-color">Sign Up for Our Newsletter</h3>
                 <form action="success.html">
                   <label for="name">Name</label>
                   <input type="text" id="name" class="form-control" required>
                   <label for="email">Email</label>
                   <input type="email" id="email" class="form-control" required>
-                  <button type="submit">Sign Up</button>
+                  <button type="submit" class="mt-2 custom-button-filled">Sign Up</button>
               </form>
             </div>
+        </div>    
     </footer>
 
     <!-- font awesome 6 -->
