--- a/booking.html
+++ b/booking.html
@@ -175,7 +175,7 @@
                   <input type="text" id="name1" class="form-control" required>
                   <label for="email2">Email</label>
                   <input type="email" id="email2" class="form-control" required>
-                  <button type="submit" class="mt-2 custom-button-filled">Sign Up</button>
+                  <button type="submit" class="mt-2 btn custom-button-filled">Sign Up</button>
               </form>
               </div>
           </div>
