--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
                   <img src="assets/images/services-1.webp" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h3 class="card-title sub-heading-color">Play in our cafe</h3>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn custom-button-filled">Go somewhere</a>
+                    <p class="card-text">Enjoy a relaxing atmosphere while diving into exciting board
+                      games with friends. Indulge in our cosy café offerings, from
+                      aromatic coffees to savory snacks.</p>
+                    <a href="#" class="btn custom-button-filled">Book Now</a>
                   </div>
                   <div class="card-footer">
                     <p class="mb-0">$7 per person</p>
@@ -105,8 +107,10 @@
                   <img src="assets/images/services-2.webp" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h3 class="card-title sub-heading-color">Game Library</h3>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn custom-button-filled">Go somewhere</a>
+                    <p class="card-text">Explore our collection of board games, ranging from classic
+                      favorites to the latest releases. Find the perfect game for
+                      any age, skill level, or interest.</p>
+                    <a href="game-library.html" class="btn custom-button-filled">Click Here</a>
                   </div>
                   <div class="card-footer">
                     <p class="mb-0">See Prices In Store</p>
@@ -118,11 +122,13 @@
                   <img src="assets/images/services-3.webp" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h3 class="card-title sub-heading-color">Events</h3>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn custom-button-filled">Go somewhere</a>
+                    <p class="card-text"> Join us for special game nights, tournaments, and themed
+                      events. A great opportunity to meet new people and test your
+                      gaming skills.</p>
+                    <a href="#events-list" class="btn custom-button-filled">Events</a>
                   </div>
                   <div class="card-footer">
-                    <p class="mb-0">$7 per person</p>
+                    <p class="mb-0">From $5 per person</p>
                   </div>
                 </div>
               </div>
@@ -130,12 +136,14 @@
                 <div class="card">
                   <img src="assets/images/services-4.webp" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h3 class="card-title sub-heading-color">Card title</h3>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn custom-button-filled">Go somewhere</a>
+                    <h3 class="card-title sub-heading-color">Kids parties</h3>
+                    <p class="card-text">Celebrate your child's special day with us! We offer fun,
+                      game-filled party packages that are sure to delight young
+                      gamers and their friends.</p>
+                    <a href="booking.html" class="btn custom-button-filled">Book Now</a>
                   </div>
                   <div class="card-footer">
-                    <p class="mb-0">$7 per person</p>
+                    <p class="mb-0">From $7 per child</p>
                   </div>
                 </div>
               </div>
@@ -149,7 +157,7 @@
                   <p>Whether you're delving into dungeons, reliving classic games, or competing in high-stakes tournaments, there's something for every gamer. Reservations are recommended to ensure your spot at the table. Student discounts are available, so bring your student ID and enjoy more gaming for less.</p>
                   <p> Outside scheduled events, our shop remains open for regular play. Join us anytime to discover new games and meet fellow enthusiasts.</p>
                 </div>
-                <div class="col-sm-12 col-lg-6">
+                <div class="col-12 col-lg-6">
                   <h3 class="text-center sub-heading-color">Timetable of Events</h3>
                   <table class="table">
                     <thead>
@@ -282,7 +290,7 @@
                 <input type="text" id="name" class="form-control" required>
                 <label for="email">Email</label>
                 <input type="email" id="email" class="form-control" required>
-                <button type="submit" class="mt-2 custom-button-filled">Sign Up</button>
+                <button type="submit" class="mt-2 btn custom-button-filled">Sign Up</button>
             </form>
             </div>
         </div>
