--- a/success.html
+++ b/success.html
@@ -145,7 +145,7 @@
                   <input type="text" id="name" class="form-control" required>
                   <label for="email">Email</label>
                   <input type="email" id="email" class="form-control" required>
-                  <button type="submit" class="mt-2 custom-button-filled">Sign Up</button>
+                  <button type="submit" class="mt-2 btn custom-button-filled">Sign Up</button>
               </form>
             </div>
         </div>    
