--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <hr>    
         </section>  
         <section id="events-list" class="section container-fluid">
-            <h2 class="text-center">Join Our Events</h2>
+            <h2 class="text-center display-4">Join Our Events</h2>
             <div class="row m-4 align-items-center">
                 <div class="col-sm-12 col-lg-6 mb-2">
                   <p>Whether you're delving into dungeons, reliving classic games, or competing in high-stakes tournaments, there's something for every gamer. Reservations are recommended to ensure your spot at the table. Student discounts are available, so bring your student ID and enjoy more gaming for less.</p>
@@ -200,7 +200,7 @@
             <hr>
         </section>
         <section id="testimonials" class="container-fluid">
-          <h1 class="text-center">What Our Customers Think</h1>
+          <h2 class="text-center display-4">What Our Customers Think</h1>
           <div class="row m-4 p-2">
             <div class="col-sm-12 col-md-6 col-lg-4">
               
@@ -222,7 +222,7 @@
       <div class="container section">
         <div class="row m-4 justify-content-center">
             <div class="col-12 text-center">
-              <h2 class="text-center display-6">Contact Us</h2>
+              <h2 class="text-center display-5">Contact Us</h2>
             </div>
             <!--Contact Info-->
             <div class="col-sm-12 col-md-6 col-lg-4">
